fixed java syntax bullshit